[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/star_gold.png" type="Texture" id=1]
[ext_resource path="res://Debris/DebrisPiece.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 15.1259

[node name="DebrisPiece" type="RigidBody2D"]
position = Vector2( 0.5, 0 )
collision_layer = 4
collision_mask = 13
mode = 2
physics_material_override = SubResource( 3 )
contacts_reported = 3
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.117647, 0.0431373, 0.0431373, 1 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Label" type="Label" parent="."]
anchor_left = -1.0
anchor_top = -1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.72909
margin_top = -4.9687
margin_right = 10.2709
margin_bottom = 9.0313
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel" type="Label" parent="."]
visible = false
margin_left = -20.6766
margin_top = -31.0592
margin_right = 19.3234
margin_bottom = -17.0592
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_DebrisPiece_body_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
